@@ -1,84 +1,0 @@
-#if !defined(DECDOUBLESYMBOLS)
-#define DECDOUBLESYMBOLS
-
-#ifdef IN_LIBGCC2
-#define decDoubleAbs __decDoubleAbs
-#define decDoubleAdd __decDoubleAdd
-#define decDoubleAnd __decDoubleAnd
-#define decDoubleCanonical __decDoubleCanonical
-#define decDoubleClass __decDoubleClass
-#define decDoubleClassString __decDoubleClassString
-#define decDoubleCompare __decDoubleCompare
-#define decDoubleCompareSignal __decDoubleCompareSignal
-#define decDoubleCompareTotal __decDoubleCompareTotal
-#define decDoubleCompareTotalMag __decDoubleCompareTotalMag
-#define decDoubleCopy __decDoubleCopy
-#define decDoubleCopyAbs __decDoubleCopyAbs
-#define decDoubleCopyNegate __decDoubleCopyNegate
-#define decDoubleCopySign __decDoubleCopySign
-#define decDoubleDigits __decDoubleDigits
-#define decDoubleDivide __decDoubleDivide
-#define decDoubleDivideInteger __decDoubleDivideInteger
-#define decDoubleFMA __decDoubleFMA
-#define decDoubleFromBCD __decDoubleFromBCD
-#define decDoubleFromInt32 __decDoubleFromInt32
-#define decDoubleFromPacked __decDoubleFromPacked
-#define decDoubleFromString __decDoubleFromString
-#define decDoubleFromUInt32 __decDoubleFromUInt32
-#define decDoubleFromWider __decDoubleFromWider
-#define decDoubleGetCoefficient __decDoubleGetCoefficient
-#define decDoubleGetExponent __decDoubleGetExponent
-#define decDoubleInvert __decDoubleInvert
-#define decDoubleIsCanonical __decDoubleIsCanonical
-#define decDoubleIsFinite __decDoubleIsFinite
-#define decDoubleIsInfinite __decDoubleIsInfinite
-#define decDoubleIsInteger __decDoubleIsInteger
-#define decDoubleIsNaN __decDoubleIsNaN
-#define decDoubleIsNormal __decDoubleIsNormal
-#define decDoubleIsSignaling __decDoubleIsSignaling
-#define decDoubleIsSignalling __decDoubleIsSignalling
-#define decDoubleIsSigned __decDoubleIsSigned
-#define decDoubleIsSubnormal __decDoubleIsSubnormal
-#define decDoubleIsZero __decDoubleIsZero
-#define decDoubleLogB __decDoubleLogB
-#define decDoubleMax __decDoubleMax
-#define decDoubleMaxMag __decDoubleMaxMag
-#define decDoubleMin __decDoubleMin
-#define decDoubleMinMag __decDoubleMinMag
-#define decDoubleMinus __decDoubleMinus
-#define decDoubleMultiply __decDoubleMultiply
-#define decDoubleNextMinus __decDoubleNextMinus
-#define decDoubleNextPlus __decDoubleNextPlus
-#define decDoubleNextToward __decDoubleNextToward
-#define decDoubleOr __decDoubleOr
-#define decDoublePlus __decDoublePlus
-#define decDoubleQuantize __decDoubleQuantize
-#define decDoubleRadix __decDoubleRadix
-#define decDoubleReduce __decDoubleReduce
-#define decDoubleRemainder __decDoubleRemainder
-#define decDoubleRemainderNear __decDoubleRemainderNear
-#define decDoubleRotate __decDoubleRotate
-#define decDoubleSameQuantum __decDoubleSameQuantum
-#define decDoubleScaleB __decDoubleScaleB
-#define decDoubleSetCoefficient __decDoubleSetCoefficient
-#define decDoubleSetExponent __decDoubleSetExponent
-#define decDoubleShift __decDoubleShift
-#define decDoubleShow __decDoubleShow
-#define decDoubleSubtract __decDoubleSubtract
-#define decDoubleToBCD __decDoubleToBCD
-#define decDoubleToEngString __decDoubleToEngString
-#define decDoubleToInt32 __decDoubleToInt32
-#define decDoubleToInt32Exact __decDoubleToInt32Exact
-#define decDoubleToIntegralExact __decDoubleToIntegralExact
-#define decDoubleToIntegralValue __decDoubleToIntegralValue
-#define decDoubleToPacked __decDoubleToPacked
-#define decDoubleToString __decDoubleToString
-#define decDoubleToUInt32 __decDoubleToUInt32
-#define decDoubleToUInt32Exact __decDoubleToUInt32Exact
-#define decDoubleToWider __decDoubleToWider
-#define decDoubleVersion __decDoubleVersion
-#define decDoubleXor __decDoubleXor
-#define decDoubleZero __decDoubleZero
-#endif
-
-#endif
