@@ -1,24 +1,0 @@
-#if !defined(DECSINGLESYMBOLS)
-#define DECSINGLESYMBOLS
-
-#ifdef IN_LIBGCC2
-#define decSingleFromBCD __decSingleFromBCD
-#define decSingleFromPacked __decSingleFromPacked
-#define decSingleFromString __decSingleFromString
-#define decSingleFromWider __decSingleFromWider
-#define decSingleGetCoefficient __decSingleGetCoefficient
-#define decSingleGetExponent __decSingleGetExponent
-#define decSingleRadix __decSingleRadix
-#define decSingleSetCoefficient __decSingleSetCoefficient
-#define decSingleSetExponent __decSingleSetExponent
-#define decSingleShow __decSingleShow
-#define decSingleToBCD __decSingleToBCD
-#define decSingleToEngString __decSingleToEngString
-#define decSingleToPacked __decSingleToPacked
-#define decSingleToString __decSingleToString
-#define decSingleToWider __decSingleToWider
-#define decSingleVersion __decSingleVersion
-#define decSingleZero __decSingleZero
-#endif
-
-#endif
