@@ -1,5 +1,17 @@
 2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
 
+	* libdecnumber/decCommonSymbols.h: Remove file.
+	* libdecnumber/decDPDSymbols.h: Likewise.
+	* libdecnumber/decDoubleSymbols.h: Likewise.
+	* libdecnumber/decPackedSymbols.h: Likewise.
+	* libdecnumber/decQuadSymbols.h: Likewise.
+	* libdecnumber/decSingleSymbols.h: Likewise.
+	* libdecnumber/decDPD.h: Remove decDPDSymbols.h include.
+	* libdecnumber/decNumberLocal.h: Remove decDPDSymbols.h and
+	decCommonSymbols.h include.
+
+2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
+
 	* libdecnumber/decContextSymbols.h: Remove file.
 	* libdecnumber/decContext.h: Remove decContextSymbols.h include.
 	* libdecnumber/Makefile.in: remove decContextSymbols.h associate
